scss/index.scss
// Font
$website-font: "Space Grotesk", sans-serif, monospace !important;

// Index Page Colors
$light: #fff;
$light-pink: #f4ecf2;
$dark-purple: #632ed2;

$industries-title: darken(#4744ac, 15%) !default;
$industries-background: darken(#93d6ee, 10%) !default;

$team-title: rgb(99, 46, 210) !default;

$splash-light-purple: #7c408a;
$splash-light-blue: #3f5aaa;

$faq-background: #6387fe !default;
$faq-title: darken(white, 0%) !default;
$faq-content: lighten(white, 10%) !default;

$theme-light-green: #86eace;

$faq-anchor: #003fee;
$faq-anchor-hover: #0231b3;

$highlight-height: -0.5em;
$highlight-ypos: 0.07em;

$team-highlight: lighten($team-title, 52%) !default;

html {
  font-size: unquote("clamp(16px, 1.15vw, 24px)");
}
body {
  overflow-x: hidden;
}

.td-container {
  max-width: unquote("max(70rem, 83.3333333%)") !important;
}

// =====================================================
//                   Splash Section
// =====================================================
.splash-img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  min-height: 40rem;
  height: 100vh;
  max-height: 94rem;
  background-image: url("/static/img/graphics/TD-scene-image.png");
  background-position: calc(100% + 20vw);
  background-size: 80%;
  background-repeat: no-repeat;
  background-image: url("/static/img/graphics/TD-scene-image.png");
  background-position: center 1rem;
  background-size: 50rem;
  background-repeat: no-repeat;
}

.splash {
  min-height: 40rem;
  height: 100vh;
  max-height: 94rem;
  z-index: 1;
  display: flex;
  justify-content: center;
  overflow: hidden;
  background: linear-gradient(to bottom, #1b135e 0%, $dark-purple 70%);

  .applications-closed-message {
    display: none;
    color: #fdcb6e;
  }

  .discord {
    width: 4rem;
    height: 4rem;
    right: 2rem;
    bottom: 2rem;
    background: #98a8e7;
    border: 0.32rem solid rgba(255, 255, 255, 0.5);
    box-shadow: 0 0.3rem 0.5rem rgba(53, 26, 117, 0.25);
    backdrop-filter: blur(2rem);
    border-radius: 6.25rem;
    z-index: 1000;
    position: fixed;
  }
  .discord > img {
    width: 100%;
    padding: 0.5rem;
  }
}

.mlh-trust-badge {
  display: block;
  max-width: 6.25rem;
  min-width: 3.75rem;
  position: absolute;
  right: 1rem;
  top: 0;
  width: 10%;
  z-index: 10000;
}
.splash-container {
  margin-top: 8em;
  margin-bottom: 0;
}
.splash-content-container {
  padding-top: 8rem;
  padding-left: 1rem;
  padding-right: 1rem;
  background: linear-gradient(to top, #632ed2 20%, rgba(255, 255, 255, 0));
  margin-left: -1rem;
  margin-right: -1rem;
}
.mega-margin-bottom {
  margin-bottom: 8rem;
}
#splash-content {
  text-align: center;
  justify-content: flex-end;

  .splash-info {
    z-index: 1;
    max-width: 32rem;
    padding: 0.625rem;
  }
  .date {
    font-size: 1.75rem;
  }
  .apply-btn {
    color: white;
    text-decoration: none;
    font-size: 1.5rem;
    border-radius: 0;
    line-height: 2rem;
    font-weight: bold;
    border: 0.32rem solid #80ffd5;
    background: linear-gradient(to top left, #00c3c37c 0%, #00e2e2d2 70%);
    font-family: "Space Grotesk", sans-serif, monospace !important;
  }
  .apply-btn:hover {
    text-decoration: none;
    background: transparent;
  }
  .mentor-btn {
    color: white;
    text-decoration: none;
    font-size: 1.5rem;
    border-radius: 0;
    line-height: 2rem;
    font-weight: bold;
    border: 0.32rem solid #a983fd;
    background: linear-gradient(to top left, #632ed2 0%, #8f5bff 70%);
    font-family: "Space Grotesk", sans-serif, monospace !important;
  }
  .mentor-btn:hover {
    text-decoration: none;
    background: transparent;
  }
  .td-logo-text {
    font-weight: 700;
    color: white;
    font-size: 3rem;
    line-height: 1.2;
  }
  .apply-btn-caption {
    font-weight: 500;
    color: #d2b6ff;
    font-family: "Space Grotesk", sans-serif, monospace !important;
  }
  .content-margin {
    margin-bottom: 8rem;
    margin-top: 1rem;
  }
}
@include media-breakpoint-up(lg) {
  .splash-content-container {
    background: transparent;
    padding-top: 0;
  }
  #splash-content {
    justify-content: center;
    text-align: left;
    .date {
      font-size: 2.4rem;
    }
    .td-logo-text {
      font-size: 4rem;
    }
    .content-margin {
      margin-bottom: 2rem;
      margin-top: 1rem;
    }
  }
  .splash-img {
    background-image: url("/static/img/graphics/TD-scene-image.png");
    background-position: calc(100% + 20vw);
    background-size: 80%;
    background-repeat: no-repeat;
  }
  .link-text {
    height: 40px;
  }
}

#text-logo {
  width: 100%;
  max-width: 30rem;
}

.modal-content {
  .form-control:focus {
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0), 0 0 3px #4740af;
  }
}

// =====================================================
//                    Transitions
// =====================================================
$default-transition-height: 7vh;
$large-transition-height: 18rem;
$small-transition-height: 8.375rem;

// splash transition
.white-purple-transition {
  background: url("/static/img/transitions/white_purple_transition.png");
  height: 11.25rem;
  transform: translateY(-5.625rem);
  background-size: auto 100%;
  background-color: transparent;
  image-rendering: crisp-edges;
}

// footer transition
.purple-white-transition {
  background: url("/static/img/transitions/purple_white_transition.png");
  height: $large-transition-height;
  transform: rotate(180deg);
  background-size: auto 100%;
  image-rendering: crisp-edges;
}

.blue-white-transition {
  background: url("/static/img/transitions/blue_white_transition.png");
  height: $small-transition-height;
  background-size: auto 100%;
  image-rendering: crisp-edges;
}

.white-blue-transition {
  background: url("/static/img/transitions/blue_white_transition.png");
  transform: rotate(180deg) translateY(-2px);
  height: $small-transition-height + 2;
  background-size: auto 100%;
  image-rendering: crisp-edges;
}
/* ... */

